--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -29,17 +29,24 @@
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
-                <ToggleButton
-                    android:id="@+id/toggleWalk"
-                    android:layout_width="90dp"
-                    android:layout_height="30dp"
-                    android:layout_marginStart="16dp"
-                    android:background="@drawable/toggle_button_animated_background"
-                    android:textOff="산책중"
-                    android:textOn="산책중 아님" />
+<!--                <ToggleButton-->
+<!--                    android:id="@+id/toggleWalk"-->
+<!--                    android:layout_width="90dp"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:layout_marginStart="16dp"-->
+<!--                    android:background="@drawable/toggle_button_animated_background"-->
+<!--                    android:textOff="산책중"-->
+<!--                    android:textOn="산책중 아님" />-->
 
 
                 <!-- weight 속성을 사용해 빈 공간을 채워넣는 View 추가 -->
+
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/dog_home" />
+
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
@@ -47,10 +54,12 @@
 
                 <com.google.android.material.chip.Chip
                     android:id="@+id/chipMapFilter"
+                    style="@style/Widget.Material3.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
-                    android:text="필터" />
+                    android:text="필터"
+                    android:checked="false"/>
 
             </LinearLayout>
 
@@ -62,15 +71,11 @@
     <LinearLayout
         android:id="@+id/LinearLayoutOffWalk"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_weight="0.4"
+        android:layout_height="wrap_content"
+
         android:orientation="vertical"
         android:visibility="visible">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
 
         <Button
@@ -81,10 +86,7 @@
             android:gravity="center"
             android:text="산책하기" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+
 
     </LinearLayout>
 
@@ -511,6 +513,7 @@
                 android:id="@+id/buttonFilterSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:text="적용" />
         </LinearLayout>
