--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -52,8 +52,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/storefront_24px"
             app:civ_border_color="#000000"
-            app:civ_border_overlay="true"
-            app:civ_border_width="5dp" />
+            app:civ_border_overlay="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -88,50 +87,75 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:orientation="vertical">
+        android:layout_marginRight="8dp">
 
-        <RatingBar
-            android:id="@+id/placeUserRatingBar1"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:numStars="5"
-            android:rating="4.5" />
-
-        <TextView
-            android:id="@+id/placeUserReview1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="수의사님이 친절하시고 시설도 좋습니다!" />
-
-        <RatingBar
-            android:id="@+id/placeUserRatingBar2"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:numStars="5"
-            android:rating="1" />
-
-        <TextView
-            android:id="@+id/placeUserReview2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="과잉진료를 받았습니다.." />
-
-        <Button
-            android:id="@+id/buttonSubmitReview"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:text="리뷰 등록하기" />
-    </LinearLayout>
+            android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <RatingBar
+                    android:id="@+id/placeUserRatingBar1"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="4.5" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/placeUserReview1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수의사님이 친절하시고 시설도 좋습니다!" />
+
+
+            <RatingBar
+                android:id="@+id/placeUserRatingBar2"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="1" />
+
+            <TextView
+                android:id="@+id/placeUserReview2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="과잉진료를 받았습니다.." />
+
+            <Button
+                android:id="@+id/buttonSubmitReview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:text="리뷰 등록하기" />
+        </LinearLayout>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/chipViewAllReviews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:padding="4dp"
+            android:text="전체 리뷰 보기"
+            android:textSize="12sp"
+            />
+
+
+    </FrameLayout>
 
 </LinearLayout>
