--- a/app/src/main/res/navigation/walk.xml
+++ b/app/src/main/res/navigation/walk.xml
@@ -10,5 +10,28 @@
         android:id="@+id/item_walk"
         android:name="com.petpal.mungmate.WalkFragment"
         android:label="fragment_walk"
-        tools:layout="@layout/fragment_walk" />
+        tools:layout="@layout/fragment_walk" >
+        <action
+            android:id="@+id/action_item_walk_to_placeReviewFragment3"
+            app:destination="@id/placeReviewFragment" />
+        <action
+            android:id="@+id/action_item_walk_to_writePlaceReviewFragment"
+            app:destination="@id/writePlaceReviewFragment" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/writePlaceReviewFragment"
+        android:name="com.petpal.mungmate.WritePlaceReviewFragment"
+        android:label="fragment_write_place_review"
+        tools:layout="@layout/fragment_write_place_review">
+
+    </fragment>
+    <fragment
+        android:id="@+id/placeReviewFragment"
+        android:name="com.petpal.mungmate.PlaceReviewFragment"
+        android:label="PlaceReviewFragment"
+        tools:layout="@layout/fragment_place_review"/>
+
+
 </navigation>
