fix : 커뮤니티 리사이클러뷰 아이템 클릭하면 앱이 꺼지는 문제 해결 #32

--- a/app/src/main/res/layout/fragment_user_start.xml
+++ b/app/src/main/res/layout/fragment_user_start.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/google_login_btn_backgroundTint"
+        android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/google_logo_18"
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:text="@string/google_login"
