--- a/app/src/main/res/layout/fragment_community_post_detail.xml
+++ b/app/src/main/res/layout/fragment_community_post_detail.xml
@@ -128,14 +128,14 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/communityPostDetailContent"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/common_padding"
+                tools:text="rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddrrrrrrrrrrrrrrrrrrrrrrrrrrrrr"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/communityPostDetailPostCardView"
-                tools:text="rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddrrrrrrrrrrrrrrrrrrrrrrrrrrrrr" />
+                app:layout_constraintEnd_toEndOf="@id/communityPostDetailPostCardView"
+                app:layout_constraintStart_toStartOf="@id/communityPostDetailPostCardView"
+                app:layout_constraintTop_toBottomOf="@id/communityPostDetailPostCardView" />
 
             <LinearLayout
                 android:id="@+id/communityPostDetailBottomLinerLayout"
@@ -159,15 +159,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:text="좋아요 7"/>
+                    android:text="좋아요 7"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/communityPostDetailCommentTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/common_padding"
                     android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/common_padding"
                     android:drawableStart="@drawable/comment"
                     android:drawablePadding="@dimen/common_small_padding"
                     android:text="@string/comment"
@@ -182,7 +182,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/common_margin"
-                android:layout_marginTop="@dimen/common_padding"
                 android:layout_marginEnd="@dimen/common_margin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
