refactor: #31 navigation 수정
- 탭 화면만 fragment_nav_graph에 두고, 나머지 화면들은 모두 nav_graph로 이동해서 bottomNav
view, gone관리 안해줘도 되도록 수정

--- a/app/src/main/res/navigation/chat.xml
+++ b/app/src/main/res/navigation/chat.xml
@@ -3,17 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chat"
-    app:startDestination="@id/item_chat">
+    app:startDestination="@id/chatRoomFragment">
 
-    <fragment
-        android:id="@+id/item_chat"
-        android:name="com.petpal.mungmate.ui.chatting.ChatFragment"
-        android:label="fragment_chat"
-        tools:layout="@layout/fragment_chat">
-        <action
-            android:id="@+id/action_item_chat_to_item_chat_room"
-            app:destination="@id/chatRoomFragment" />
-    </fragment>
     <fragment
         android:id="@+id/walkMateRequestFragment"
         android:name="com.petpal.mungmate.ui.chatting.WalkMateRequestFragment"
