--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".user.UserInfoFragment">
+    tools:context=".ui.user.UserInfoFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/userInfoToolbar"
@@ -34,11 +34,12 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/startMainImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="112dp"
+                android:layout_height="112dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/user_icon"
+                android:layout_marginBottom="8dp"
+                android:src="@drawable/user_profile"
                 app:civ_border_color="#000000"
                 app:civ_border_overlay="true"
                 app:civ_border_width="0dp" />
@@ -58,7 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:counterEnabled="true"
-                app:counterMaxLength="8">
+                app:counterMaxLength="8"
+                app:errorEnabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textInputUserNicknameText"
