--- a/app/src/main/res/layout/fragment_user_start.xml
+++ b/app/src/main/res/layout/fragment_user_start.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".user.UserStartFragment">
+    tools:context=".ui.user.UserStartFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/startMainImageView"
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/google_login_btn_backgroundTint"
+        android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/google_logo_18"
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:text="@string/google_login"
