chatting->chat 패키지명 변경, 1:1문의 ui 변경

--- a/app/src/main/res/navigation/chat.xml
+++ b/app/src/main/res/navigation/chat.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/walkMateRequestFragment"
-        android:name="com.petpal.mungmate.ui.chatting.WalkMateRequestFragment"
+        android:name="com.petpal.mungmate.ui.chat.WalkMateRequestFragment"
         android:label="산책 메이트 요청"
         tools:layout="@layout/fragment_walk_mate_request" />
     <fragment
         android:id="@+id/chatRoomFragment"
-        android:name="com.petpal.mungmate.ui.chatting.ChatRoomFragment"
+        android:name="com.petpal.mungmate.ui.chat.ChatRoomFragment"
         android:label="채팅방"
         tools:layout="@layout/fragment_chat_room" >
         <action
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/reportUserFragment"
-        android:name="com.petpal.mungmate.ui.chatting.ReportUserFragment"
+        android:name="com.petpal.mungmate.ui.chat.ReportUserFragment"
         android:label="사용자 신고"
         tools:layout="@layout/fragment_report_user" />
 </navigation>
