--- a/app/src/main/res/layout/fragment_report_user.xml
+++ b/app/src/main/res/layout/fragment_report_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.chatting.ReportUserFragment" >
+    tools:context=".ui.chat.ReportUserFragment" >
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_report_user"
