--- a/app/src/main/res/layout/row_inquiry.xml
+++ b/app/src/main/res/layout/row_inquiry.xml
@@ -58,14 +58,15 @@
         android:id="@+id/layoutInquiryBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/md_theme_light_surfaceVariant"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/text_view_inquiry_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp"
             android:text="산책을 끝냈는데도 포인트가 안들어왔어요ㅠㅠ\n확인 부탁드립니다.." />
 
         <com.google.android.material.divider.MaterialDivider
@@ -76,6 +77,7 @@
             android:id="@+id/layoutInquiryAnswer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/md_theme_light_surfaceVariant"
             android:orientation="horizontal"
             android:padding="16dp">
 
