feat: #41 내 정보 화면, 다른 사람 정보 화면
- 내 정보 화면은 회원가입 내 정보 입력 화면 재활용
- 다른 사람 정보 화면에서 recyclerView에 ListAdapter
도입해봄 추후 화면 연결 후 테스트 필요

--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -16,21 +16,15 @@
         app:title="사용자 정보 입력"
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-    <View
-        android:id="@+id/userInfoDivider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/startMainImageView"
@@ -112,7 +106,7 @@
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/userInfoChipgroup"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
