--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -81,6 +81,13 @@
         <action
             android:id="@+id/action_mainFragment_to_communitySearchFragment"
             app:destination="@id/communitySearchFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_userInfoFragment"
+            app:destination="@id/userInfoFragment" >
+            <argument
+                android:name="isProfile"
+                android:defaultValue="false" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/communityWritingFragment"
@@ -113,4 +120,14 @@
     <include app:graph="@navigation/match_history" />
     <include app:graph="@navigation/walk_history" />
     <include app:graph="@navigation/announcement" />
+    <fragment
+        android:id="@+id/userInfoFragment"
+        android:name="com.petpal.mungmate.user.UserInfoFragment"
+        android:label="fragment_user_info"
+        tools:layout="@layout/fragment_user_info" >
+        <argument
+            android:name="isProfile"
+            app:argType="boolean"
+            android:defaultValue="true" />
+    </fragment>
 </navigation>
