--- a/app/src/main/res/drawable/circular_shape.xml
+++ b/app/src/main/res/drawable/circular_shape.xml
@@ -2,7 +2,7 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#A0A0A0" >
     <item>
         <shape android:shape="oval">
-            <solid android:color="#99FFB3B3" />
+            <solid android:color="@color/seed" />
         </shape>
     </item>
 
