--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -104,7 +104,7 @@
                                 android:orientation="vertical">
 
                                 <ImageView
-                                    android:id="@+id/imageView3"
+                                    android:id="@+id/buttonAddPet"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:background="@drawable/circular_shape"
