--- a/app/src/main/res/layout/fragment_announcement_detail.xml
+++ b/app/src/main/res/layout/fragment_announcement_detail.xml
@@ -43,18 +43,24 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textViewAnnounceDetailContent"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="멍메이트를 소개합니다!"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/textViewAnnounceDetailContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="멍메이트를 소개합니다!"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
