--- a/app/src/main/res/layout/fragment_order_history_detail.xml
+++ b/app/src/main/res/layout/fragment_order_history_detail.xml
@@ -48,10 +48,11 @@
                     android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
             </LinearLayout>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dp"
+                android:background="?android:attr/listDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -77,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="배송중"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                     android:textColor="@color/md_theme_dark_inversePrimary"
                     android:textStyle="bold" />
 
@@ -85,7 +86,6 @@
                     android:id="@+id/recyclerViewOrderDetailItem"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
                     android:nestedScrollingEnabled="false" />
 
                 <LinearLayout
@@ -123,9 +123,10 @@
 
             </LinearLayout>
 
-            <com.google.android.material.divider.MaterialDivider
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="10dp" />
+                android:layout_height="8dp"
+                android:background="?android:attr/listDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -225,9 +226,10 @@
             </LinearLayout>
 
 
-            <com.google.android.material.divider.MaterialDivider
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="10dp" />
+                android:layout_height="8dp"
+                android:background="?android:attr/listDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -331,7 +333,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:text="35,000원"
-                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                         android:textStyle="bold" />
                 </LinearLayout>
 
