--- a/app/src/main/res/layout/row_order_history.xml
+++ b/app/src/main/res/layout/row_order_history.xml
@@ -69,8 +69,9 @@
             android:text="배송 조회" />
     </LinearLayout>
 
-    <com.google.android.material.divider.MaterialDivider
+    <View
         android:layout_width="match_parent"
-        android:layout_height="10dp" />
+        android:layout_height="8dp"
+        android:background="?android:attr/listDivider" />
 
 </LinearLayout>
