--- a/app/src/main/res/navigation/order_history.xml
+++ b/app/src/main/res/navigation/order_history.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/order_history"
-    app:startDestination="@id/orderHistoryDetailFragment">
+    app:startDestination="@id/orderHistoryFragment">
     <fragment
         android:id="@+id/orderHistoryFragment"
         android:name="com.petpal.mungmate.ui.orderhistory.OrderHistoryFragment"
@@ -13,7 +13,6 @@
             android:id="@+id/action_orderHistoryFragment_to_orderHistoryDetailFragment"
             app:destination="@id/orderHistoryDetailFragment" />
     </fragment>
-
 
     <fragment
         android:id="@+id/orderHistoryDetailFragment"
