--- a/app/src/main/res/layout/fragment_order_history.xml
+++ b/app/src/main/res/layout/fragment_order_history.xml
@@ -22,7 +22,8 @@
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="16dp">
+            android:paddingLeft="16dp"
+            android:paddingBottom="16dp">
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/chipGroupOrderStatus"
