--- a/app/src/main/res/layout/row_order_history_item.xml
+++ b/app/src/main/res/layout/row_order_history_item.xml
@@ -33,6 +33,8 @@
             android:id="@+id/textViewOrderItemName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:text="상품명"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
 
