--- a/app/src/main/res/layout/row_order_history.xml
+++ b/app/src/main/res/layout/row_order_history.xml
@@ -55,7 +55,7 @@
             android:id="@+id/recyclerViewOrderHistoryItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false">
+            android:nestedScrollingEnabled="true">
 
         </androidx.recyclerview.widget.RecyclerView>
 
