--- a/app/src/main/res/layout/row_order_history_item.xml
+++ b/app/src/main/res/layout/row_order_history_item.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:paddingTop="8dp">
 
     <ImageView
         android:id="@+id/imageViewOrderItem"
